got a lot of the execution phase happy, compilation was broken, working on cleaning that up now